<resources>
    <string name="app_name">Qaim</string>
    <string name="cvv">CVV</string>
    <string name="LogIn">تسجيل الدخول</string>
    <string name="LogInAsClient">انشاء حساب جديد</string>
    <string name="registerAsIndividual">إنشاء حساب جديد</string>
    <string name="registerAsCompany">إنشاء حساب جديد</string>
    <string name="registerAsPreviewer">إنشاء حساب جديد</string>
    <string name="singIn">تسجيل الدخول</string>
    <string name="end">حذف</string>
    <string name="edit">تعديل</string>
    <string name="report">تقرير</string>
    <string name="payment">المدفوعات</string>
    <string name="noti">الإشعارات</string>
    <string name="aboutApp">عن التطبيق</string>
    <string name="logOut">تسجيل الخروج</string>
    <string name="welcome">اهلا بك</string>
    <string name="display">عرض</string>
    <string name="confirm">تأكيد</string>
    <string name="accepted">مقبول</string>
    <string name="accept">قبول</string>
    <string name="contactData">بيانات الاتصال</string>
    <string name="rejected">مرفوض</string>
    <string name="addRealStateArea">اضافة مساحة العقار (م2)</string>
    <string name="reject">رفض</string>
    <string name="displayFile">عرض الملف</string>
    <string name="addDeal">اضافة تفويض</string>
    <string name="editLocation">تعديل الموقع</string>
    <string name="showFile">عرض الملف</string>
    <string name="individual">فرد</string>
    <string name="licence">اضافة بطاقة ضريبية</string>
    <string name="addNumLicence">اضافة الرقم الضريبي</string>
    <string name="client">عميل</string>
    <string name="client_company_name">اسم المستخدم</string>
    <string name="company_name">اسم الشركة</string>
    <string name="name">الاسم</string>
    <string name="addId">اضافة بطاقة الهوية الوطنية</string>
    <string name="client_company_email">البريد الالكتروني</string>
    <string name="chooseCity">اختر المدينة</string>
    <string name="chooseNeighborhood">اختر المنطقة</string>
    <string name="addEstatePhoto">اضافة صور العقار</string>
    <string name="addLocation">اضافة موقع</string>
    <string name="client_company_phone">رقم الجوال</string>
    <string name="editeProfile">تعديل الملف الشخصي</string>
    <string name="myOrders">طلباتي</string>
    <string name="allOrders">العقارات التي تم تقييمها</string>
    <string name="ordersDetails">تفاصيل الطلب</string>
    <string name="ordersDetailsAcceptable">تفاصيل طلب مقبول</string>
    <string name="myOffers">عروضي</string>
    <string name="alloffers">عروض الأسعار المقدمة لشركات التقييم</string>
    <string name="busInProcess">الأعمال الجارية</string>
    <string name="addRealState">اضافة عقار</string>
    <string name="TypeRealState">نوع العقار</string>
    <string name="RealStateArea">مساحة العقار</string>
    <string name="amountdue">المبلغ المستحق</string>
    <string name="someAddtionalDetails">بعض التفاصيل الاضافية</string>
    <string name="addAddtionalDetails">اضافة تفاصيل اضافية</string>
    <string name="company">شركة</string>
    <string name="previewer">معاين</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mapKey">=</string>
    <string name="addInfo">اضافة معلومات</string>
    <string name="addFess">اضافة رسوم المعاينة</string>
    <string name="fess">رسوم المعاينة</string>
    <string name="chooseArea">اختار المنطقة</string>
    <string name="InfoAboutMe">معلومات اضافية عني </string>
    <string name="addInfoAboutMe">اضف معلومات تعريفية</string>
    <string name="experienceField">مجال الخبرة</string>
    <string name="addExperienceField">اضف مجال الخبرة</string>
    <string name="yearsOfWork">سنوات العمل</string>
    <string name="addyearsOfWork">اضف سنوات العمل</string>
    <string name="appointmentRequests">طلبات التعيين</string>
    <string name="sendNotes">ارسال ملاحظات</string>
    <string name="subject">الموضوع</string>
    <string name="content">نص الشكوى</string>
    <string name="sendTo">ارسال الى </string>
    <string name="order">طلبات</string>
    <string name="submitReport">تقديم تقرير المعاينة</string>
    <string name="comments">التعليقات</string>
    <string name="companyName">اسم الشركة</string>
    <string name="phone">رقم الجوال</string>
    <string name="whatsApp">الواتساب</string>
    <string name="Schemeandwidget">المخطط و القطعة</string>
    <string name="realStateLimits">حدود العقار</string>
    <string name="addRealStateLimits">اضف حدود العقار</string>
    <string name="generalRealStateLocation">الموقع العالم للعقار</string>
    <string name="addGeneralRealStateLocation">اضافة الموقع العام للعقار</string>
    <string name="attributed">الخصائص</string>
    <string name="attributes">المنسوب</string>
    <string name="addAttributed">اضافة خصائص</string>
    <string name="writingPreviewReports">كتابة تقارير المعاينة</string>
    <string name="writeReports">كتابة تقارير</string>
    <string name="writeFeed">كتابة الشكوى</string>
    <string name="service">الخدمات</string>
    <string name="addService">اضف خدمات</string>
    <string name="theNameOfTheNearestCommercialStreet">اسم اقرب شارع تجاري </string>
    <string name="addtheNameOfTheNearestCommercialStreet">أضف اسم اقرب شارع تجاري</string>
    <string name="howFarRealstateRatting">كم يبعد عن العقار موضوع التقييم</string>
    <string name="addHowFarRealstateRation">اضف كم يبعد عن العقار موضوع التقييم</string>
    <string name="howFarRealstateFromCityCenter">كم يبعد العقار عن وسط المدينة</string>
    <string name="addHowFarRealstateFromCityCenter">اضف كم يبعد العقار عن وسط المدينة</string>
    <string name="theViews"> الوجهات المطلة</string>
    <string name="addTheViews">اضف الوجهات المطلة</string>
    <string name="clientData">بيانات العميل</string>
    <string name="theDirectionWhichReportDirected">الجهة الموجه لها التقرير</string>
    <string name="reportUser">مستخدم التقرير</string>
    <string name="thePurposeOf">الغرض من التقييم</string>
    <string name="addNotes">اضف ملاحظات</string>
    <string name="addNotesHere">اضف ملاحظات هنا</string>
    <string name="uploadRealstatePicture">رفع صور العقار</string>
    <string name="uploadFile">رفع ملف</string>
    <string name="endReport">التقرير النهائي</string>
    <string name="fileName">اسم الملف</string>
    <string name="myBalance">رصيدي</string>
    <string name="termsAndConditions">شروط و أحكام</string>
    <string name="balanceDue">الرصيد المستحق</string>
    <string name="submitPreviewReports">إرسال تقارير المعاينة</string>
    <string name="pullBalance">سحب الرصيد</string>
    <string name="addLicence">اضف بطاقة ضريبية</string>
    <string name="listOfRealstate">قائمة العقارات</string>
    <string name="sendRateOffer">ارسال عرض تقييم</string>
    <string name="projects">المشاريع</string>
    <string name="showDetails">مشاهدة التفاصيل</string>
    <string name="realStateDetails">تفاصيل العقار</string>
    <string name="cost">تكلفة التقييم</string>
    <string name="Notes">ملاحظات</string>
    <string name="realStateType">نوع العقار</string>
    <string name="neighborhood">المنطقة</string>
    <string name="city">المدينة</string>
    <string name="additionalDetalisForRealStateAdreess">معلومات اضافية عن عنوان العقار</string>
    <string name="chooseTeam">اختيار الفريق</string>
    <string name="writeRates">كتابة التقييم</string>
    <string name="sendFile">ارسال الملف</string>
    <string name="endProject">انهاء المشروع</string>
    <string name="draft">الملف التعريفي للشركة / ملحقات</string>
    <string name="sendRateDisplay">ارسال عرض تقييم</string>
    <string name="choosePreviewer">اختر المعاين</string>
    <string name="chooseArtist">اختر الرسام</string>
    <string name="chooseChecker">ختر المدقق</string>
    <string name="setTeam">تعيين فريق</string>
    <string name="delete">حذف</string>
    <string name="sendData">إرسال بيانات</string>
    <string name="userName">اسم المستخدم</string>
    <string name="password">كلمة المرور</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="addAddtionalData">اضافة بيانات اخرى</string>
    <string name="add">اضافة</string>
    <string name="AddArtist">اضافة رسام</string>
    <string name="Addreviwer">اضافة مدقق</string>
    <string name="rate">تقييم</string>
    <string name="teamReports">تقارير الفريق</string>
    <string name="previewerReport">تقرير المعاين</string>
    <string name="show">مشاهدة</string>
    <string name="artistReport">تقرير الرسام</string>
    <string name="download">تحميل</string>
    <string name="checkerReport">تقرير المدقق</string>
    <string name="realStateData">بيانات العقار</string>
    <string name="OwnershipType">نوع الملكية</string>
    <string name="realStateLocation">موقع العقار</string>
    <string name="rateData">بيانات التقييم</string>
    <string name="valueBasis">اساس القيمة</string>
    <string name="rateDate">تاريخ التقييم</string>
    <string name="previewDate">تاريخ المعاينة</string>
    <string name="rateTechniques">اساليب التقييم المتبعة</string>
    <string name="approvedStyleAndMethod">الاسلوب و الطريقة المعتمدة</string>
    <string name="valueHypothesis">فرضية القيمة</string>
    <string name="evaluationCriteria">معايير التقييم</string>
    <string name="independentConflictOfInterest">تضارب المصالح و الاستقلالية</string>
    <string name="referenceNumber">الرقم المرجعي</string>
    <string name="reportType">نوع التقرير</string>
    <string name="reportDate">تاريخ التقرير</string>
    <string name="reportVersion">نسخة التقرير</string>
    <string name="ReportUseAndPublicationAndDistributionRestrictions">استخدام التقرير و قيود النشر و التوزيع</string>
    <string name="sendRate">ارسال التقييم</string>
    <string name="yourRequestWillAlreadyBeAccepted">سوف يتم قبول الطلب بالفعل</string>
    <string name="cancel">الغاء</string>
    <string name="doYouReallyWantToRejectTheRequest">هل تود رض الطلب بالفعل</string>
    <string name="Profile">الملف الشخصي</string>
    <string name="forgetPassword">نسيت كلمة المرور</string>
    <string name="createNewAccount">انشاء حساب جديد</string>
    <string name="youNotHaveAccount">ليس لديك حساب </string>
    <string name="Realstate">عقارات</string>
    <string name="description">وصف</string>
    <string name="pound">ريال</string>
    <string name="offerDetails">تفاصيل العرض</string>
    <string name="UpdateRealeState">تعديل العقار</string>
    <string name="pay">دفع</string>
    <string name="cardNumber">رقم البطاقة</string>
    <string name="endDate">تاريخ الانتهاء</string>
    <string name="Year">سنة</string>
    <string name="Month">شهر</string>
    <string name="chooseRegion">اختر المنطقة</string>
    <string name="identity">الهوية الوطنية</string>
    <string name="address">العنوان</string>
    <string name="sendPassword">ارسال كلمة المرور</string>
    <string name="passwordReset">استرجاع كلمة المرور</string>
    <string name="Pleaseenteryouremailtoreceiveapasswordresetlink">يرجى إدخال بريدك الإلكتروني لتلقي رابط إعادة تعيين كلمة المرور</string>
    <string name="choosePainter">اختار الرسام</string>
    <string name="addPainter">اضف رسام</string>
    <string name="enterEmail">ادخل البريد الالكتروني</string>
    <string name="entermail">ادخل البريد الالكتروني</string>
    <string name="send">ارسال</string>
    <string name="employeeEdit">تعديل الموظف</string>
    <string name="realStateTittle">عنوان العقار</string>
    <string name="payments">المدفوعات</string>
    <string name="addCost">اضف قيمة التكلفة</string>
    <string name="ratingReports">تقارير التقييم</string>
    <string name="printRating">طباعة التقييم</string>
    <string name="companyRate">تقييم الشركة</string>
    <string name="previewerRate">تقييم المعاين</string>
    <string name="addpreviewer">اضف معاين</string>
    <string name="choose">اختيار</string>
    <string name="showProfile">مشاهدة الحساب</string>
    <string name="noData">عفوا لا يوجد بيانات لعرضها</string>
    <string name="tittle">العنوان</string>
    <string name="AlـAhmadiahـCompany">شركة الأحمدية</string>
    <string name="View_the_inspection_report">عرض تقرير المعاين</string>
</resources>