<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardBackgroundColor="@color/cardViewBackgroundColor"
    card_view:cardCornerRadius="20dp"
    card_view:cardUseCompatPadding="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/group9821"
            android:layout_marginBottom="8dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_text_view_status"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="16dp"
                android:textColor="#FFF"
                android:layout_marginLeft="16dp"
                android:text="@string/accepted"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/nameOforder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#303030"
            android:textSize="20sp"
            android:text="@string/name"

            android:maxLines="1"
            />
        <TextView
            android:id="@+id/descriptionOforder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#303030"
            android:textSize="16sp"

            android:text="@string/description"
            android:layout_marginBottom="8dp"
            android:maxLines="2"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/endOrderBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_edit_orders_btn"
                android:textColor="#FFF"
                android:text="@string/end"
                android:layout_marginRight="8dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/editOrderBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_end_orders_btn"
                android:textColor="#FFF"
                android:text="@string/edit"
                />

        </LinearLayout>





    </LinearLayout>



</androidx.cardview.widget.CardView>