<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardBackgroundColor="@color/cardViewBackgroundColor"
    card_view:cardCornerRadius="20dp"
    card_view:cardUseCompatPadding="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/offerCompanyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="16dp"
                android:textColor="#000"
                android:text="@string/accepted"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/offerPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="16dp"
                android:textColor="#000"
                android:text="@string/accepted"
                android:textDirection="rtl"
                android:textSize="20sp"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/descriptionOfOffer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="16sp"
            android:textDirection="rtl"
            android:text="@string/description"
            android:layout_marginBottom="8dp"
            android:maxLines="2"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_add_btn"
            android:text="@string/display"
            android:textColor="#FFF"
            android:id="@+id/showBtn"
            android:layout_marginBottom="8dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/rejectOfferBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_edit_orders_btn"
                android:textColor="#FFF"
                android:text="@string/reject"
                android:layout_marginRight="8dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/acceptOfferBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_end_orders_btn"
                android:textColor="#FFF"
                android:text="@string/accept"
                android:layout_marginLeft="8dp"
                />

        </LinearLayout>


    </LinearLayout>



</androidx.cardview.widget.CardView>