<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tit"
        android:textSize="16sp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:textDirection="rtl"
        android:text="@string/teamReports"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/re"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="4dp"
        android:layout_below="@id/tit"
        >
        <androidx.cardview.widget.CardView
            android:layout_margin="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_alignParentRight="true"
            android:id="@+id/cardView"
            android:layout_centerVertical="true"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="fitXY"
                android:id="@+id/image"
                android:src="@drawable/icon"
                />
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_toLeftOf="@id/cardView"
            android:layout_margin="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_centerVertical="true"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tittle"
                android:textSize="16sp"
                android:textColor="#313131"
                android:text="@string/tittle"
                android:textDirection="rtl"
                android:maxLines="1"
                />
            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:textSize="12dp"
                android:textColor="#585858"
                android:text="@string/description"
                android:textDirection="rtl"
                android:maxLines="1"
                />

        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_below="@id/re"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/show"
            android:background="@drawable/custom_add_btn"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:textColor="#FFF"
            android:id="@+id/showProfile"
            android:textSize="10sp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/custom_end_orders_btn"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/download"
            android:id="@+id/choose"
            android:textColor="#FFF"
            android:textSize="10sp"
            />
    </LinearLayout>
</RelativeLayout>