<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bottom_sheet_dialog"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/yes_or_no"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="16dp"
            android:textColor="#303030"
            android:text="@string/yourRequestWillAlreadyBeAccepted"
            android:gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            android:gravity="center"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/rejectBtn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:textColor="#CE3B48"
                android:text="@string/cancel"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:textSize="14sp"
                android:gravity="center"
                android:maxLines="1"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sendNotes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_end_orders_btn"
                android:textColor="#FFF"
                android:text="@string/confirm"
                android:textSize="14sp"
                android:gravity="center"
                android:maxLines="1"
                />


        </LinearLayout>

    </LinearLayout>

</ScrollView>