<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.PreviewerOrdersFragment" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/group8937"
        android:layout_marginTop="-200dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/topView"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="#FFF"
            android:textSize="25sp"
            />
<!--        <ImageButton-->
<!--            android:id="@+id/imageBtn"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentRight="true"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:src="@drawable/group9810"-->
<!--            android:background="#00000000"-->
<!--            android:layout_marginRight="16dp"-->
<!--            />-->
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topView"
        android:layout_marginTop="24dp"
        android:background="@drawable/bottom_sheet_dialog"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <TextView
            android:id="@+id/tx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/appointmentRequests"
            android:textColor="#000"

            android:textSize="18sp"
            android:visibility="gone"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/PreviewerRecycleView"
            android:layout_below="@id/tx"
            android:layout_marginBottom="68dp"
            />
    </RelativeLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/noData"
        android:text="@string/noData"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="#303030"
        android:visibility="gone"
        />
</RelativeLayout>